@@ -10,4 +10,4 @@ svn-clean: maintainer-clean
 	INSTALL missing aclocal.m4 install-sh ylwrap src/Makefile.in \
 	src/config.h.in maintainer/Makefile.in libs/pnapi/Makefile.in \
 	utils/Makefile.in tests/Makefile.in doc/Makefile.in doc/mdate-sh \
-	man/Makefile.in src/config-log.h
+	man/Makefile.in src/config-log.h maintainer/debian/changelog
