@@ -59,7 +59,7 @@ clean:
 install: build
 	dh_testdir
 	dh_testroot
-	dh_prep  
+#	dh_prep  
 	dh_installdirs
 
 	# Add here commands to install the package into debian/@PACKAGE_TARNAME@.
