@@ -31,6 +31,8 @@ Version 1.9-unreleased
 * fixed bug #14150 (`https://gna.org/bugs/?14150'): empty node is only
   printed if it is reachable from the initial node
 
+* updated maintainer scripts to support Launchpad
+
 
 See file ChangeLog <http://service-technology.org/files/wendy/ChangeLog> for
 complete version history.
